use height to fix text vertical alignment on ie11

--- a/src/scss/components/_card-carousel-item.scss
+++ b/src/scss/components/_card-carousel-item.scss
@@ -110,7 +110,7 @@ $spotlight-item-breakpoint: 'xs';
 .card-carousel-item__label {
   white-space: pre-wrap;
   font-size: typescale(2);
-  min-height: 4rem;
+  height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
